Add tela listCategoria

--- a/src/tela/FormeMenuPrincipal.form
+++ b/src/tela/FormeMenuPrincipal.form
@@ -44,6 +44,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Listar Categoria"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mniLisCategoriaActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
